Changes for Filter Effects specification
----------------------------------------

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Add child selector as property value to filter property.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>
- Dimension and origin of passed image to filter() CSS Image function must be preserved.

2013-06-12  Dirk Schulze  <dschulze@adobe.com>
- Removed support for 'enable-background' and require 'isolation' instead.

2013-06-08  Dirk Schulze  <dschulze@adobe.com>
- Corrected formulas for contrast changes. Detected by Kurosawa during #testTWF.

2013-05-23  Dirk Schulze  <dschulze@adobe.com>
- Switch order of index and property index.

2013-05-22  Dirk Schulze  <dschulze@adobe.com>
- Clarify that <defs> elements are not going to be masked/clipped.
- Added section about changes since the last publication.

2013-05-15  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD (2).

2013-05-09  Dirk Schulze  <dschulze@adobe.com>
- Prepare specification for next WD.

2013-04-23  Dirk Schulze  <dschulze@adobe.com>
- Replace mix value none with auto.
- Clarify that Custom Shader is a host language for shaders
  and an extension of Custom Filter Function.
- Remove unnecessary shader uniforms.

2013-04-20  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes.
- Replace texture with image function from CSS3 Images.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes after the last edit.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Remove section about auto varying. Should be compatible to WebGL.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>
- Remove a_texCoord, a_mesCoord, u_tileSize, u_projectionMatrix variables and attributes.
These turned out to be implementation specifics that can be abstracted more from the user.
- The shader coordinate system changes to a range from [0,1] for better compatibility to WebGL.

2013-04-10  Dirk Schulze  <dschulze@adobe.com>