@@ -2,6 +2,10 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-07-04  Dirk Schulze  <dschulze@adobe.com>
+- Clarify that filter functions operate in sRGB
+- Clarify interpolation between filter functions.
+
+2013-07-04  Dirk Schulze  <dschulze@adobe.com>
 - Add child selector as property value to filter property.
 
 2013-07-04  Dirk Schulze  <dschulze@adobe.com>
